--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
   "name": "homebridge-c4-plugin",
-  "version": "1.3.3",
+  "version": "2.0.0",
   "description": "Homebridge plugin for control4",
-  "main": "index.js",
+  "main": "dist/dynamic-platform.js",
   "scripts": {
+    "clean": "rimraf ./dist",
+    "build": "rimraf ./dist && tsc",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": ">=0.12.0",
-    "homebridge": ">=0.2.0"
+    "homebridge": ">=1.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/itsfrosty/homebridge-c4-plugin"
+    "url": "git+https://github.com/keithpre/homebridge-c4-plugin"
   },
+  "files": [
+    "LICENSE",
+    "config.schema.json",
+    "dist"
+  ],
   "keywords": [
     "control4",
     "homebridge-plugin",
     "homebridge-c4-plugin"
   ],
-  "author": "itsfrosty",
+  "author": "keithpre",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/itsfrosty/homebridge-c4-plugin/issues"
+    "url": "https://github.com/keithpre/homebridge-c4-plugin/issues"
   },
-  "homepage": "https://github.com/itsfrosty/homebridge-c4-plugin",
-  "dependencies": {
+  "homepage": "https://github.com/keithpre/homebridge-c4-plugin",
+  "devDependencies": {
     "polling-to-event": "^2.0.2",
-    "request": "^2.78.0",
-    "hap-nodejs": "0.4.20"
+    "@types/node": "16.11.7",
+    "typescript": "^5.0.4",
+    "rimraf": "^5.0.0",
+    "homebridge": "^1.6.1"
   }
 }
